add functionality: if file doesn't exist, it's been downloaded; add properties