@@ -4,10 +4,16 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URL;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Properties;
 import java.util.zip.GZIPInputStream;
 
 /**
@@ -16,19 +22,46 @@ import java.util.zip.GZIPInputStream;
  */
 public class FileUtil {
 
+    private static final String PROPERTIES_FILE = "application.properties";
+    private static final Properties PROPERTIES = new Properties();
+
+    static {
+        try (InputStream inputStream = FileUtil.class.getClassLoader().getResourceAsStream(PROPERTIES_FILE)) {
+            if (inputStream == null) {
+                throw new RuntimeException("Failed to load properties file: " + PROPERTIES_FILE);
+            }
+            PROPERTIES.load(inputStream);
+        } catch (IOException e) {
+            throw new RuntimeException("Error reading properties file: " + PROPERTIES_FILE, e);
+        }
+    }
+
+    private static final String FILE_FOLDER = PROPERTIES.getProperty("file.folder");
+    private static final String FILE_NAME = PROPERTIES.getProperty("file.name");
+    private static final String FILE_URL = PROPERTIES.getProperty("download.url");
+
     /**
      * Reads a GZIP-compressed file and returns a list of valid lines.
-     * Each line is checked using the {@link #isValidLine(String)} method.
-     * Only valid lines are included in the returned list.
+     * If the file is not present, it will download the file from the provided URL.
      *
      * @return a list of valid lines from the file
-     * @throws IOException if an I/O error occurs while reading the file
+     * @throws IOException if an I/O error occurs while reading or downloading the file
      */
     public static List<String> getLinesFromFile() throws IOException {
-        File file = Path.of("file", "lng-4.txt.gz").toFile();
-        System.out.println(file.exists());
-        System.out.println(file.canRead());
-        System.out.println(file.getName());
+        Path filePath = Paths.get(FILE_FOLDER, FILE_NAME);
+        File file = filePath.toFile();
+
+        // Check if file exists; if not, download it
+        if (!file.exists()) {
+            System.out.println("File not found, downloading...");
+            downloadFile(FILE_URL, filePath);
+            System.out.println("File downloaded successfully.");
+        }
+
+        System.out.println("File exists: " + file.exists());
+        System.out.println("Can read file: " + file.canRead());
+        System.out.println("File name: " + file.getName());
+        System.out.println("file absolute path: " + file.getAbsolutePath());
         List<String> lines = new ArrayList<>();
 
         /*
@@ -50,6 +83,20 @@ public class FileUtil {
             }
         }
         return lines;
+    }
+
+    /**
+     * Downloads a file from the specified URL and saves it to the given file path.
+     *
+     * @param fileUrl  the URL from which to download the file
+     * @param savePath the path where the file should be saved
+     * @throws IOException if an I/O error occurs during download
+     */
+    private static void downloadFile(String fileUrl, Path savePath) throws IOException {
+        try (InputStream in = new URL(fileUrl).openStream()) {
+            Files.createDirectories(savePath.getParent());  // Ensure parent directories exist
+            Files.copy(in, savePath, StandardCopyOption.REPLACE_EXISTING);
+        }
     }
 
     /**
